# JoSDL2MirrorsProject

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  myToolchain.cmake  vcpkg.json
.github/workflows/: cmake.yml  emscripten.yml
SDL2Fractals/: CMakeLists.txt  SDL2Fractals.cpp  SDL2Fractals.h
SDL2Mirrors/: CMakeLists.txt  SDL2Mirrors.cpp  SDL2Mirrors.h
SDL2Mirrors/Testing/: CMakeLists.txt  TestingReflections.cpp
SDL2Mirrors/include/: BorderHit.hpp  Helper.hpp
SDL2Mirrors/src/: BorderHit.cpp  SDL2Mirrors.cpp  SDL2Mirrors.h
